RESOLVED FIXED145720
Returned Exception* values need to be initialized to nullptr when no exceptions are thrown.
https://bugs.webkit.org/show_bug.cgi?id=145720
Summary Returned Exception* values need to be initialized to nullptr when no exceptio...
Mark Lam
Reported 2015-06-05 18:06:39 PDT
For example, see https://build.webkit.org/results/Apple%20Win%207%20Release%20(Tests)/r185259%20(52263)/results.html. The relevant failures are: Tests that crashed: +inspector-protocol/debugger/didSampleProbe-multiple-probes.html +inspector-protocol/debugger/hit-breakpoint-from-console.html +inspector-protocol/debugger/setBreakpoint-condition.html Tests that failed text/pixel/audio diff: inspector-protocol/debugger/breakpoint-inside-conditons-and-actions.html inspector-protocol/debugger/setBreakpoint-actions.html inspector-protocol/debugger/setBreakpoint-column.html inspector-protocol/debugger/setBreakpointByUrl-sourceURL.html These failures only seem to manifest on the Windows Release build test bots. They don't manifest on the Debug build test bots nor Mac bots.
Attachments
the patch. (4.60 KB, patch)
2015-06-05 23:49 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2015-06-05 18:26:29 PDT
I skipped these tests for now in r185283: <http://trac.webkit.org/r185283>. It turns out, that the inspector-protocol/debugger tests were already skipped for platform/mac and inspector-protocol is skipped entirely for Debug build on platform/win. That may be why we don't see the failures on those bots.
Mark Lam
Comment 2 2015-06-05 23:45:11 PDT
Found the culprit: an un-initialized variable. This makes me re-consider introducing an opaque type for encapsulating an Exception*. But for now, I'll do the minimum fix.
Mark Lam
Comment 3 2015-06-05 23:49:03 PDT
Created attachment 254407 [details] the patch.
WebKit Commit Bot
Comment 4 2015-06-06 00:55:49 PDT
Comment on attachment 254407 [details] the patch. Clearing flags on attachment: 254407 Committed r185286: <http://trac.webkit.org/changeset/185286>
WebKit Commit Bot
Comment 5 2015-06-06 00:55:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.