Returned Exception* values need to be initialized to nullptr when no exceptions are thrown. https://bugs.webkit.org/show_bug.cgi?id=145720

Reviewed by Dan Bernstein.

Source/JavaScriptCore:

* debugger/DebuggerCallFrame.cpp:
(JSC::DebuggerCallFrame::evaluate):

Source/WebCore:

No new tests because this issue is already covered by the existing inspector-protocol tests.

* bindings/js/WorkerScriptController.cpp:
(WebCore::WorkerScriptController::evaluate):

LayoutTests:

* platform/win/TestExpectations:
- Undoing skipped tests.


Canonical link: https://commits.webkit.org/163765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185286 268f45cc-cd09-0410-ab3c-d52691b4dbfc